Manifests/billing-app-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: billing-app
  labels:
    app: billing-app
spec:
  serviceName: billing-app
  replicas: 1
  selector:
    matchLabels:
      app: billing-app
  template:
    metadata:
      labels:
        app: billing-app
    spec:
      containers:
        - name: billing-app
          image: nekitkas/billing-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: billing-app
  labels:
    app: billing-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: billing-app
  clusterIP: None
