Manifests/billing-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: billing-db
  labels:
    app: billing-db
spec:
  serviceName: billing-db
  replicas: 1
  selector:
    matchLabels:
      app: billing-db
  template:
    metadata:
      labels:
        app: billing-db
    spec:
      containers:
        - name: billing-db
          image: nekitkas/billing-db:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgsql/16/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: billing-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: billing-db
  labels:
    app: billing-db
spec:
  ports:
    - name: billing-db
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: billing-db
  clusterIP: None
